--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
 <!DOCTYPE html>
-<link rel="canonical" href="http://d3js.org/">
-<meta http-equiv="refresh" content="0;url=http://d3js.org/">
+<p>test</p>
