--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
 
-
+<head></head>
+<body>
+  
+  <h1>Benoit Was Wrong</h1>
+  <h2>How you can avoid being like Benoit</h2>
+  <ol>
+    <li>Listen to me.</li>
+    <li>Don't listen to anyone else.</li>
+    <li>Especially don't listen to Benoit.</li>
+  </ol>
+</body>
