--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head></head>
 <body>
   
@@ -11,3 +11,4 @@
     <li>Especially don't listen to Benoit.</li>
   </ol>
 </body>
+</html>
